# Robotics_Project

./: Presentation.pptx  README.md
camera_calibration/: ost.yaml  package.xml
robotics_project/: CMakeLists.txt  package.xml
turtlebot3_autorace_traffic_light/turtlebot3_autorace_traffic_light_camera/calibration/extrinsic_calibration/: projection.yaml
turtlebot3_autorace_traffic_light/turtlebot3_autorace_traffic_light_camera/nodes/: image_compensation  image_projection
turtlebot3_autorace_traffic_light/turtlebot3_autorace_traffic_light_control/nodes/: control_moving
turtlebot3_autorace_traffic_light/turtlebot3_autorace_traffic_light_detect/nodes/: detect_lane
turtlebot3_autorace_traffic_light/turtlebot3_autorace_traffic_light_detect/param/lane/: final_lane.yaml  lane.yaml
