<?xml version="1.0"?>
<package format="2">
  <name>robotics_project</name>
  <version>0.0.0</version>
  <description>The project is based on the Turtlebot3 AutoRace 2020 project</description>

  <maintainer email="manos.koutoulak@gmail.com">Emmanouil Koutoulakis</maintainer>


  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robotics_project</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="manos.koutoulak@gmail.com">Emmanouil Koutoulakis</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_autorace_traffic_light</exec_depend>
  <exec_depend>turtlebot3_autorace_msgs</exec_depend>
  <export><metapackage/></export>
</package>

